<resources>
    <string name="app_name">Speedy Pizza</string>

    //Login
    <string name="btn_login">Iniciar Sesión</string>
    <string name="edt_mail">Nombre de usuario</string>
    <string name="edt_password">Contraseña</string>

    //Inicio
    <string name="itm_about">Acerca de</string>
    <string name="itm_exit">Cerrar sesión</string>
    <string name="fab">Agregar orden</string>
    <string name="btn_entregar">Entregar</string>
    <string name="btn_anular">Anular</string>

    //Agregar orden
    <string name="tbaddorder">Agregar orden</string>
    <string name="edt_cliente">Nombre de cliente</string>
    <string name="til_selmesa">Seleccione una mesa</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="tv_total">Total: $</string>
    <string name="tv_totaln">0.0</string>
    <string name="menus">Menus</string>
    <string name="precio">Precio</string>
    <string name="cant">Cant</string>

    //Categorias
    <string name="itm_category">Seleccione categoría</string>

    //Menu
    <string name="itm_menu">Seleccione menus</string>
    <string name="itm_dialog_title">¿Agregar menu?</string>
    <string name="itm_dialog_title2">¿Eliminar menu?</string>
    <string name="itm_dialog_title3">¿Modificar cantidad?</string>
    <string name="itm_dialog_title4">¿Entregar pedido?</string>
    <string name="itm_dialog_title5">¿Anular pedido?</string>
    <string name="itm_cantidad2">Digite cantidad</string>
    <string name="btnCancelar">Cancelar</string>

    //Acerca de
    <string name="tv_desarrolladores">Desarrolladores</string>
    <string name="tv_dv1">-> Juan Carlos Molina Chamel</string>
    <string name="tv_dv2">-> Carlhos Edgardo Figueroa Tejada</string>
    <string name="tv_dv3">-> Daniel Fernando Cuellar Larín</string>
    <string name="tv_dv4">-> José Francisco Hernández Reyes</string>
    <string name="tv_dv5">-> Ezequiel Antonio Martínez Martínez</string>
    <string name="tv_version">Versión 1.0</string>
    <string name="tv_derechos">© 2021 Speedy Pizza</string>
</resources>